(#38) fixed layout problems on some sites

--- a/data/style.css
+++ b/data/style.css
@@ -1,17 +1,19 @@
 .ttw {
-    color: black;
+    display: inline;
 }
 
 .ttw-typed {
-    color: black;
+    display: inline;
 }
 
 .ttw-untyped {
     background-color: #ffeecc;
+    display: inline;
 }
 
 #ttw-cursor {
     background-color: #b0bec5;
+    display: inline;
 }
 
 .ttw-correct {
